--- a/blog/templates/add_post.html
+++ b/blog/templates/add_post.html
@@ -20,6 +20,12 @@
                     <textarea class="form-control" type="text" id="body" name="body"></textarea>
                 </div>
             </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="imgUrl">Image Url: </label>
+                    <input class="form-control" type="text" id="imgUrl" name="imgUrl"></input>
+                </div>
+            </div>
             <div class="col-12">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
